package com.example.foret_kata;

import com.example.foret_kata.UI.ForestFireGUI;

public class Main {
    public static void main(String[] args){
        ForestFireGUI.main(args);
    }
}
