package com.example.foret_kata.model;

public enum CellState {
    ON_FIRE,
    ASH,
    NOT_AFFECTED

}
